trunk/Archive2/db/a966e8f1cc6682/output
main.cpp:4:1: error: unknown type name 'using'
 using namespace std;
 ^
main.cpp:4:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'std'
 using namespace std;
                 ^
main.cpp:5:1: error: unknown type name 'wstring'
 wstring get_dms_by_location(double location) // -30.91°   to   -30°54′36.00″
 ^
main.cpp: In function 'get_dms_by_location':
main.cpp:8:5: error: unknown type name 'bool'
     bool sign = location > 0.0;
     ^
main.cpp:15:9: error: implicit declaration of function 'swprintf' [-Wimplicit-function-declaration]
         swprintf(buf, 63, L"+%d° %02d′ %05.2lf\"", d, m, location);
         ^
main.cpp:18:5: error: return makes integer from pointer without a cast
     return buf;
     ^
main.cpp:18:5: warning: function returns address of local variable [-Wreturn-local-addr]
